--- a/numerics.cabal
+++ b/numerics.cabal
@@ -60,7 +60,8 @@ library
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base ==4.6.*
+  build-depends:       base ==4.6.*,
+                    vector >= 0.10 && < 0.11
   
   -- Directories containing source files.
   -- hs-source-dirs:      
