--- a/numerics.cabal
+++ b/numerics.cabal
@@ -51,21 +51,34 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  -- exposed-modules:     
+    exposed-modules:    Numerics.Simple.Matrix.Layout
+                        Numerics.Simple.Bits 
   
   -- Modules included in this library but not exported.
   -- other-modules:       
   
   -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:    
+    other-extensions:    UnboxedTuples 
+                DataKinds 
+                TypeFamilies 
+                BangPatterns 
+                MagicHash 
+                TypeOperators
+                ExplicitForAll 
+                FlexibleInstances 
+                FlexibleContexts 
+                EmptyDataDecls 
+                MultiParamTypeClasses 
+                PolyKinds 
+                ScopedTypeVariables  
   
   -- Other library packages from which modules are imported.
-  build-depends:       base ==4.6.*,
+    build-depends:       base ==4.6.*,
                     vector >= 0.10 && < 0.11
   
   -- Directories containing source files.
-  -- hs-source-dirs:      
+    hs-source-dirs:      src 
   
   -- Base language which the package is written in.
-  default-language:    Haskell2010
+    default-language:    Haskell2010
   
