--- a/numerics.cabal
+++ b/numerics.cabal
@@ -56,7 +56,7 @@ library
   
   -- Modules included in this library but not exported.
   -- other-modules:       
-  
+    ghc-options: -O2
   -- LANGUAGE extensions used by modules in this package.
     other-extensions:    UnboxedTuples 
                 DataKinds 
