--- a/numerics.cabal
+++ b/numerics.cabal
@@ -56,7 +56,7 @@ library
   
   -- Modules included in this library but not exported.
   -- other-modules:       
-    ghc-options: -O2
+    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3"
   -- LANGUAGE extensions used by modules in this package.
     other-extensions:    UnboxedTuples 
                 DataKinds 
@@ -82,3 +82,16 @@ library
   -- Base language which the package is written in.
     default-language:    Haskell2010
   
+benchmark benchmarks
+
+    hs-source-dirs:  benchmarks, src
+
+    main-is: Benchmarks.hs
+    type: exitcode-stdio-1.0
+    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3"
+
+    build-depends:
+        base            >= 4.6.0,
+        ghc-prim        >= 0.3,
+        vector          >= 0.10,
+        criterion   
