--- a/numerics.cabal
+++ b/numerics.cabal
@@ -51,8 +51,8 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-    exposed-modules:    Numerics.Simple.Matrix.Layout
-                        Numerics.Simple.Bits 
+    exposed-modules:    Data.Numerics.Simple.Matrix.Layout
+                        Data.Numerics.Simple.Bits 
   
   -- Modules included in this library but not exported.
   -- other-modules:       
@@ -74,7 +74,8 @@ library
   
   -- Other library packages from which modules are imported.
     build-depends:       base ==4.6.*,
-                    vector >= 0.10 && < 0.11
+                    vector >= 0.10 && < 0.11,
+                    ghc-prim 
   
   -- Directories containing source files.
     hs-source-dirs:      src 
