--- a/numerics.cabal
+++ b/numerics.cabal
@@ -97,7 +97,8 @@ benchmark benchmarks
     ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3"
 
     build-depends:
-        base            >= 4.6.0,
+        base >= 4.5.0,
+        --base            >= 4.6.0,
         ghc-prim        >= 0.3,
         vector          >= 0.10,
         criterion   
