--- a/numerics.cabal
+++ b/numerics.cabal
@@ -78,7 +78,7 @@ library
                 ScopedTypeVariables  
   
   -- Other library packages from which modules are imported.
-    build-depends:       base ==4.6.*,
+    build-depends:       base >=4.5.0,
                     vector >= 0.10 && < 0.11
 
   
