--- a/numerics.cabal
+++ b/numerics.cabal
@@ -116,6 +116,4 @@ test-suite properties
       base,
       QuickCheck                 >= 2.4,
       test-framework             >= 0.6,
-      test-framework-quickcheck2 >= 0.2,
-      test-framework-th          >= 0.2,
-      transformers        
+      test-framework-quickcheck2 >= 0.2
