--- a/numerics.cabal
+++ b/numerics.cabal
@@ -89,7 +89,7 @@ library
     default-language:    Haskell2010
   
 benchmark benchmarks
-
+    default-language:    Haskell2010
     hs-source-dirs:  benchmarks, src
 
     main-is: Benchmarks.hs
@@ -103,16 +103,17 @@ benchmark benchmarks
         criterion   
 
 test-suite properties
-  type: exitcode-stdio-1.0
-  main-is: properties.hs
-  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
-  hs-source-dirs: tests, src 
+    type: exitcode-stdio-1.0
+    main-is: properties.hs
+    ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
+    hs-source-dirs: tests, src 
+    default-language:    Haskell2010
 
-  if !flag(test-properties)
-    buildable: False
-  else
-    build-depends:
-      base,
-      QuickCheck                 >= 2.4,
-      test-framework             >= 0.6,
-      test-framework-quickcheck2 >= 0.2
+    if !flag(test-properties)
+        buildable: False
+    else
+        build-depends:
+          base,
+          QuickCheck                 >= 2.4,
+          test-framework             >= 0.6,
+          test-framework-quickcheck2 >= 0.2
