--- a/numerics.cabal
+++ b/numerics.cabal
@@ -61,7 +61,8 @@ library
   
   -- Modules included in this library but not exported.
   -- other-modules:       
-    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3"
+    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3" -w  -threaded
+    -- should probably have tests for both threaded  and unthreaded cases  
   -- LANGUAGE extensions used by modules in this package.
     other-extensions:    UnboxedTuples 
                 DataKinds 
@@ -94,7 +95,7 @@ benchmark benchmarks
 
     main-is: Benchmarks.hs
     type: exitcode-stdio-1.0
-    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3"
+    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3"  -w -threaded
 
     build-depends:        
         base            >= 4.6.0,
@@ -105,7 +106,7 @@ benchmark benchmarks
 test-suite properties
     type: exitcode-stdio-1.0
     main-is: properties.hs
-    ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
+    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3" -fhpc -threaded -rtsopts -with-rtsopts=-N
     hs-source-dirs: tests, src 
     default-language:    Haskell2010
 
