switched from Data.Numerics to Numerics, may got back later, but doesn't matter

--- a/numerics.cabal
+++ b/numerics.cabal
@@ -56,8 +56,8 @@ flag test-properties
 
 library
   -- Modules exported by the library.
-    exposed-modules:    Data.Numerics.Simple.Matrix.Layout
-                        Data.Numerics.Simple.Bits 
+    exposed-modules:    Numerics.Simple.Matrix.Layout
+                        Numerics.Simple.Bits 
   
   -- Modules included in this library but not exported.
   -- other-modules:       
