never do safe style ffi calls. TOO SLOW.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 cabal.sandbox.config
 *.mix
+BenchmarkLog/2013-04-25-1246-bench.html
+BenchmarkLog/2013-04-25-1258-bench.html
+BenchmarkLog/2013-04-25-1302-bench.html
+BenchmarkLog/2013-04-25-1308-bench.html
+BenchmarkLog/2013-04-25-1351-bench.html
+BenchmarkLog/2013-04-25-1431-bench.html
+BenchmarkLog/2013-04-25-1435-bench.html
+BenchmarkLog/2013-04-25-1445-bench.html
+mostlyBuilds.html
