--- a/numerics.cabal
+++ b/numerics.cabal
@@ -106,7 +106,7 @@ benchmark benchmarks
     main-is: Benchmarks.hs
     type: exitcode-stdio-1.0
     --- not sure if the "-bb-vectorize" llvm opt pragma is a good idea or no
-    ghc-options: -O2 -fllvm -optlo "-O3"   -optlc "-O3"    -optc "-msse4.2"  -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2 -fprof-auto
+    ghc-options: -O2 -fllvm -optlo "-O3"   -optlc "-O3"    -optc "-msse4.2"  -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2 
 
     --- -static -fprof-auto   
             --  -threaded -rtsopts -with-rtsopts=-N2    
