--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ BenchmarkLog/2013-04-25-1431-bench.html
 BenchmarkLog/2013-04-25-1435-bench.html
 BenchmarkLog/2013-04-25-1445-bench.html
 mostlyBuilds.html
+BenchmarkLog
