--- a/numerics.cabal
+++ b/numerics.cabal
@@ -64,7 +64,7 @@ library
   -- Modules included in this library but not exported.
   -- other-modules:       
 
-    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3" -w  -optc "-msse4.2"  -optlo "-std-compile-opts" -optlo  "-regalloc=pbqp"  -fllvm-tbaa
+    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3" -w -optc "-march=corei7-avx"  -optc "-mavx" -optlo "-std-compile-opts" -optlo  "-regalloc=pbqp"  -fllvm-tbaa
 
 
     -- should probably have tests for both threaded  and unthreaded cases  
@@ -95,7 +95,7 @@ library
 
     c-sources: cbits/prefetch.c
                 cbits/simplemat.c
-
+    cc-options: -march=corei7-avx -mavx
 
   -- Directories containing source files.
     hs-source-dirs:      src 
@@ -110,14 +110,14 @@ benchmark benchmarks
     main-is: Benchmarks.hs
     type: exitcode-stdio-1.0
     --- not sure if the "-bb-vectorize" llvm opt pragma is a good idea or no
-    ghc-options: -O2 -fllvm -optlo "-O3"    -optlc "-O3" -optlo "-std-compile-opts"    -optc "-msse4.2"  -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2  -fllvm-tbaa -optlo  "-regalloc=pbqp" 
+    ghc-options: -O2 -fllvm -optlo "-O3"    -optlc "-O3" -optlo "-std-compile-opts"      -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2  -fllvm-tbaa -optlo  "-regalloc=pbqp" 
 
     --- -static -fprof-auto   
             --  -threaded -rtsopts -with-rtsopts=-N2    
     c-sources:  cbits/testAppleBLAS.c 
                 cbits/prefetch.c
                 cbits/simplemat.c
-    
+    cc-options: -march=corei7-avx -mavx
     -- we dont need no header files,
 
 
