--- a/numerics.cabal
+++ b/numerics.cabal
@@ -64,7 +64,9 @@ library
   -- Modules included in this library but not exported.
   -- other-modules:       
 
-    ghc-options: -O2 -fllvm -optlo "-O3"  -optlc "-O3" -w -optc "-march=corei7-avx"  -optc "-mavx" -optlo "-std-compile-opts" -optlo  "-regalloc=pbqp"  -fllvm-tbaa
+    ghc-options: -O2  -optlo "-O3"  -optlc "-O3" -w   -optlo "-std-compile-opts" -optlo  "-regalloc=pbqp"  -fllvm-tbaa  -fllvm  -pgma "gcc -c"
+     ---optc "-march=native" 
+    -- -fllvm
 
 
     -- should probably have tests for both threaded  and unthreaded cases  
@@ -92,10 +94,12 @@ library
                     transformers >= 0.3.0.0,
                     primitive >= 0.5.0.0 && < 0.6
 
-    --x-cc-name: gcc 
+
     c-sources: cbits/prefetch.c
                 cbits/simplemat.c
-    cc-options: -march=corei7-avx -mavx
+    cc-options:   -mavx
+
+    -- -msse4.2
 
   -- Directories containing source files.
     hs-source-dirs:      src 
@@ -110,14 +114,16 @@ benchmark benchmarks
     main-is: Benchmarks.hs
     type: exitcode-stdio-1.0
     --- not sure if the "-bb-vectorize" llvm opt pragma is a good idea or no
-    ghc-options: -O2 -fllvm -optlo "-O3"    -optlc "-O3" -optlo "-std-compile-opts"      -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2  -fllvm-tbaa -optlo  "-regalloc=pbqp" 
-    --x-cc-name: gcc 
+    ghc-options: -O2 -optlo "-O3"  -fllvm   -optlc "-O3" -optlo "-std-compile-opts"      -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2  -fllvm-tbaa -optlo  "-regalloc=pbqp"    -pgma "gcc -c"
+    
+ 
     --- -static -fprof-auto   
             --  -threaded -rtsopts -with-rtsopts=-N2    
     c-sources:  cbits/testAppleBLAS.c 
                 cbits/prefetch.c
                 cbits/simplemat.c
-    cc-options: -march=corei7-avx -mavx
+    cc-options: -mavx
+    --   -msse4.2
     -- we dont need no header files,
 
 
