--- a/numerics.cabal
+++ b/numerics.cabal
@@ -64,7 +64,7 @@ library
   -- Modules included in this library but not exported.
   -- other-modules:       
 
-    ghc-options: -O2  -optlo "-O3"  -optlc "-O3" -w   -optlo "-std-compile-opts" -optlo  "-regalloc=pbqp"  -fllvm-tbaa  -fllvm  -pgma "gcc -c"
+    ghc-options: -O2  -optlo "-O3"  -optlc "-O3" -w   -optlo "-std-compile-opts" -optlo  "-regalloc=pbqp"  -fllvm-tbaa  -fllvm  -pgma "gcc -c -Xassembler"
      ---optc "-march=native" 
     -- -fllvm
 
@@ -98,8 +98,8 @@ library
     c-sources: cbits/prefetch.c
                 cbits/simplemat.c
     cc-options:   -mavx
+    x-cc-name: clang
 
-    -- -msse4.2
 
   -- Directories containing source files.
     hs-source-dirs:      src 
@@ -114,7 +114,7 @@ benchmark benchmarks
     main-is: Benchmarks.hs
     type: exitcode-stdio-1.0
     --- not sure if the "-bb-vectorize" llvm opt pragma is a good idea or no
-    ghc-options: -O2 -optlo "-O3"  -fllvm   -optlc "-O3" -optlo "-std-compile-opts"      -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2  -fllvm-tbaa -optlo  "-regalloc=pbqp"    -pgma "gcc -c"
+    ghc-options: -O2 -optlo "-O3"  -fllvm   -optlc "-O3" -optlo "-std-compile-opts"      -optlo "-bb-vectorize"  -rtsopts -threaded -with-rtsopts=-N2  -fllvm-tbaa -optlo  "-regalloc=pbqp"    
     
  
     --- -static -fprof-auto   
@@ -123,8 +123,7 @@ benchmark benchmarks
                 cbits/prefetch.c
                 cbits/simplemat.c
     cc-options: -mavx
-    --   -msse4.2
-    -- we dont need no header files,
+    x-cc-name: clang
 
 
 
