--- a/numerics.cabal
+++ b/numerics.cabal
@@ -97,7 +97,7 @@ library
 
     c-sources: cbits/prefetch.c
                 cbits/simplemat.c
-    cc-options:   -msse4.2 -march=corei7
+    cc-options:   -msse4.2 -march=corei7 -O3
     --x-cc-name: clang
 
 
@@ -122,7 +122,7 @@ benchmark benchmarks
     c-sources:  cbits/testAppleBLAS.c 
                 cbits/prefetch.c
                 cbits/simplemat.c
-    cc-options: -msse4.2 -march=corei7
+    cc-options: -msse4.2 -march=corei7 -O3
     --x-cc-name: clang
 
 
